# parkrunpointsleague

./: .gitignore  README.md  functions.sh
assets/css/: style.css
assets/jquery-ui-1.12.1.custom/: jquery-ui.css  jquery-ui.min.css  jquery-ui.theme.css  jquery-ui.theme.min.css
assets/js/: league.js
deploy/aws/packer/: .gitignore  check-if-ami-old.sh  packer-build-all.sh  packer-init.sh  ssh-connect-to-packer-builder.sh
deploy/aws/packer/centos-7-base/: README.md  ansible-debug-run.sh  packer-build-image.sh  packer.pkr.hcl
deploy/aws/packer/centos-7-from-iso/: README.md  packer-build-image.sh
deploy/aws/packer/centos-7-jenkins-controller/: README.md  ansible-debug-run.sh  packer-build-image.sh  packer.pkr.hcl
deploy/aws/packer/centos-7-jenkins-worker-prpl-builder/: README.md  packer-build-image.sh  packer.pkr.hcl
deploy/aws/packer/centos-7-nexus/: README.md  packer.pkr.hcl
deploy/aws/packer/centos-7-prpl/: README.md  packer.pkr.hcl
deploy/aws/packer/win-2019-active-directory/: ansible-debug-run.sh  packer.pkr.hcl  readme.md
deploy/aws/packer/win-2019-base/: packer-build-image.sh  packer.pkr.hcl
deploy/aws/scripts/: .gitignore  cloud-dev-install.sh  create-client-vpn-cert.sh  delete-unused-amis.py  docker-login-ecr.sh  docker-push-to-aws.sh  git-clone-all.sh  git-pull-all.sh  helm-login-ecr.sh  k8s-proxy-dashboard.sh  secrets-encrypt.sh
deploy/aws/terraform/: .gitignore  README.md
deploy/aws/terraform/backbone/: .terraform.lock.hcl  ami.tf  application-load-balancer-public.tf  client-vpn.tf  cloudwatch-alarms.tf  dns-domain-registration.tf  dns.tf  ecr.tf  ecs-cluster.tf  ecs-prpl.tf  ecs.tf  iam.tf  k8s-aws-alb-ingress.tf  k8s-cert-manager.tf  k8s-cluster-eks.tf  k8s-cluster-rancher.tf  k8s-dashboard.tf  k8s-efs-csi.tf  k8s-ingress.tf  k8s-jenkins.tf  k8s-kube2iam.tf  main.tf  outputs.tf  prpl-environment.sh  route53.tf  s3.tf  secrets.encrypted.yml  teleport-bastion.tf  terraform-disable-for-savings.sh  terraform.tfvars  tgw.tf  variables.tf  versions.tf  vpc.tf
deploy/aws/terraform/core/: .terraform.lock.hcl  ami-win.tf  ami.tf  application-load-balancer-public.tf  cloudwatch.tf  dns.tf  jenkins.template.yaml  jenkins.tf  main.tf  nexus.tf  packer.tf  prpl-environment.sh  prpl.tf  route53.tf  secrets.encrypted.json  secrets.encrypted.yml  secrets.tf  secrets.yml.encrypted  telegraf.tf  terraform-disable-for-savings.sh  terraform.tfvars  variables.tf  versions.tf  vpc.tf
deploy/aws/terraform/prod/: .terraform.lock.hcl  ami.tf  dns.tf  iam.tf  main.tf  prpl-environment.sh  prpl.tf  secrets.encrypted.yml  secrets.tf  secrets.yml  terraform-disable-for-savings.sh  terraform.tfvars  variables.tf  versions.tf  vpc.tf
deploy/docker/: docker-config.sh  docker-parse-container-inspect-json.py
deploy/docker/image/: .gitignore  docker-build-image.sh  docker-build-images.sh
deploy/docker/image/prpl/: .dockerignore  .gitignore  DOCKER_IMAGE_TAG  Dockerfile  docker-build-image.sh  docker-push-to-gcp.sh  entrypoint.sh  test-run-container.sh  test-run-service.sh
deploy/docker/image/prpl-base/: .dockerignore  DOCKER_IMAGE_TAG  Dockerfile  docker-build-image.sh  docker-push-to-gcp.sh  test-run-container.sh
deploy/docker/image/prpl-builder/: DOCKER_IMAGE_TAG  Dockerfile  docker-build-image.sh  docker-push-to-gcp.sh  entrypoint.sh  test-run-container.sh
deploy/gcp/packer/prpl-libs/: motd  (+2 more)
deploy/helm/: Chart.yaml  config-gcp.yaml  config-mariadb.yaml  helm-delete-mariadb.sh  helm-delete.sh  helm-install-mariadb.sh  helm-install.sh  helm-upgrade-mariadb.sh  values.yaml
deploy/helm/jenkins/: helm-delete-jenkins.sh  helm-install-jenkins.sh  helm-upgrade-jenkins.sh  jenkins-volume-minikube.yaml  values.yaml
deploy/helm/templates/: deployment.yaml  service.yaml
deploy/kubernetes/: create-cluster-gcp.sh  create-secrets.sh  deploy-delete.sh  deploy-mysql-delete.sh  deploy-mysql.sh  deploy-scale.sh  deploy-set-image.sh  deploy.sh  deployment-gcp.yaml  deployment-mysql-pv.yaml  deployment-mysql.yaml  deployment-service-gcp.yaml  deployment-service.yaml  deployment.yaml
deploy/terraform/prpl/: compute.tf  project.tf
deploy/terraform/prpl-gce/: compute.tf  project.tf  terraform-env.sh  terraform-init.sh
deploy/terraform/prpl-gke/: backend.tf  kubernetes.tf  my-plan  project.tf  terraform-env.sh  terraform-init.sh
doc/: prpld-example-mkpc004.xml  prpld.service  readme.txt
sql/: backup-db.sh  create-db.sh  create-db.sql  create-schema.sh  create-schema.sql  drop-db.sh  drop-db.sql  drop-schema.sh  drop-schema.sql  restore-db.sh  sample-data.sh  sample-data.sql  sample-queries.sql
src/: CMakeLists.txt  build.sh  strip-debug.sh
src/exe/: CMakeLists.txt
src/exe/prpld/: CMakeLists.txt  Cache.cpp  Cache.h  Common.h  EventHistoryCache.cpp  EventHistoryCache.h  EventHistoryScraper.cpp  EventHistoryScraper.h  HandlerFactory.cpp  HandlerFactory.h  LogFormatter.cpp  LogFormatter.h  PRPLApplication.cpp  PRPLHTTPServerApplication.cpp  PRPLHTTPServerApplication.h  ParsePageSAX.cpp  ResultsCache.cpp  ResultsCache.h  ResultsController.cpp  ResultsController.h  ResultsScraper.cpp  ResultsScraper.h  Scraper.cpp  Scraper.h  prpld.cpp
src/exe/prpld/datamodel/: AthleteDataModel.cpp  AthleteDataModel.h  EventDataModel.cpp  EventDataModel.h  EventLeagueDataModel.cpp  EventLeagueDataModel.h  EventLeagueItemDataModel.cpp  EventLeagueItemDataModel.h  EventResultDataModel.cpp  EventResultDataModel.h  EventResultItemDataModel.cpp  EventResultItemDataModel.h
src/exe/prpld/dataobject/: Athlete.cpp  Athlete.h  Event.cpp  Event.h  EventLeague.cpp  EventLeague.h  EventLeagueItem.cpp  EventLeagueItem.h  EventResult.cpp  EventResult.h  EventResultItem.cpp  EventResultItem.h  Param.cpp  Param.h
src/exe/prpld/requesthandlers/: AthleteHandler.cpp  AthleteHandler.h  BaseHandler.cpp  BaseHandler.h  EventLeagueHandler.cpp  EventLeagueHandler.h  FileRequestHandler.cpp  FileRequestHandler.h  ForceResultsUpdateHandler.cpp  ForceResultsUpdateHandler.h  GetLatestResultHandler.cpp  GetLatestResultHandler.h  HealthPageHandler.cpp  HealthPageHandler.h  HomePageHandler.cpp  HomePageHandler.h
(+175 files in other folders)
